--- a/locales/kiny/translation.json
+++ b/locales/kiny/translation.json
@@ -100,37 +100,37 @@
 
 
       "our-mission-title": "Inshingano Yacu",
-      "our-mission-description": "We are on a mission to produce high-quality metals through responsible, eco-conscious operations and business practices",
-      "our-vision-title": "Our Vision",
-      "our-vision-description" : "We make a difference in the world by responsibly and reliably sourcing essential technology metals.",
+      "our-mission-description": "Dufite inshingano yo gutunganya ibyuma byujuje ubuziranenge binyuze mu bikorwa bibungabunga ibidukikije kandi hakurikijwe amahame y'ubushabitsi.",
+      "our-vision-title": "Icyerekezo Cyacu",
+      "our-vision-description" : "Dukora itandukaniro mu Isi binyuze mu gutanga ibikoresho byifashishwa mu ikoranabuhanga rigezweho bikomeye.",
 
 
-      "our-values-section-title": "Our Values",
-      "we-empower": "We empower & impact",
-      "we-empower-description": "We empower communities by investing in programs that develop talent and drive local economic growth.",
-      "we-do-no-warm": "We do no harm",
-      "we-do-no-warm-description": "We are committed to safe, ethical, and eco-friendly mining, ensuring our work benefits communities and the planet.",
-      "we-set-standard": "We set the standard",
-      "we-set-standard-description": "As a leading mining organization, we follow international standards and continuously improve our operations.",
-      "we-hold-ourselves-accountable": "We hold ourselves accountable",
-      "we-hold-ourselves-accountable-description": "We each uphold our mission, follow legislation, self-assess, and address issues to stay on track.",
+      "our-values-section-title": "indangagaciro Zacu",
+      "we-empower": "Twongerera Ubushobozi & Tukanazana Impinduka",
+      "we-empower-description": "Tuzamura abaturage dushora imari muri gahunda ziteza imbere impano zabo tukanazamura ubukungu bwabo.",
+      "we-do-no-warm": "Ntitwangiza",
+      "we-do-no-warm-description": "Twiyemeje gucukura amabuye y'agaciro mu buryo bwiza, bwemewe, kandi butangiza ibidukikije, twita ku kuba imirimo yacu igirira abaturage akamaro abaturage ndetse n’isi.",
+      "we-set-standard": "Twashyizeho amahame",
+      "we-set-standard-description": "Nk’ikigo kiyoboye ibindi mu bucukuzi bw’amabuye y'agaciro, dukurikiza amahame mpuzamahanga kandi dukomeza kunoza imikorere yacu.",
+      "we-hold-ourselves-accountable": "Twita ku inshingano zacu",
+      "we-hold-ourselves-accountable-description": "Twese twitter ku nshingano zacu, dukurikiza amategeko, turisuzuma ubwacu, kandi tugakemura ibibazo kugira ngo dukomeze gukora neza.",
 
 
 
-      "our-strategy-section-title": "Our Strategy",
-      "our-strategy-section-description": "To grow sustainably, we have defined four key pillars with clear outcomes and targets, which we are pursuing equally over the next three years.",
+      "our-strategy-section-title": "Ingamba Zacu",
+      "our-strategy-section-description": "Kugira ngo twimakaze iterambere rirambye, twashyizeho inkingi enye, zikubiyemo intego tuzakurikiza mu gihe cy’imyaka itatu iri imbere.",
 
-      "our-strategies-business": "Our Business",
-      "our-strategies-business-description": "We prioritize optimized business planning to ensure safe, ethical, profitable, and efficient mining operations across all our processes.",
+      "our-strategies-business": "Ubucurizu Bwacu",
+      "our-strategies-business-description": "Dushyira imbere igenamigambi ry’ubucuruzi ryateguwe neza kugira ngo tumenye neza ko hari umutekano, dukora mu buryo bwemewe, bubyara inyungu, mu bucukuzi bw'amabuye y'agaciro ndetse no mu bikorwa byacu byose.",
 
-      "our-strategies-people": "Our People",
-      "our-strategies-people-description": "We are dedicated to motivating our team to deliver outstanding results and reach their full potential.",
+      "our-strategies-people": "Abantu Bacu",
+      "our-strategies-people-description": "Twiyemeje gushishikariza abakozi bacu gutanga ibisubizo byiza  no gukora uko bashoboye.",
 
-      "our-strategies-relationships": "Our Relationships",
-      "our-strategies-relationships-description": "We prioritize managing relationships with external stakeholders as a fundamental aspect of our business operations",
+      "our-strategies-relationships": "Imikoranire Yacu",
+      "our-strategies-relationships-description": "Dushyira imbere kwita ku mubano dufitanye n’abafatanyabikorwa bo hanze nk’igice cy’ibanze cy’ibikorwa byacu by’ubucuruzi.",
 
-      "our-strategies-future": "Our Future",
-      "our-strategies-future-description": "We actively pursue organic and greenfield growth opportunities to secure a prosperous future.",
+      "our-strategies-future": "Ejo Hazaza Hacu",
+      "our-strategies-future-description": "Twita ku kubera uburyo bushya bw’imikorere bwaduteza imbere butangije ibidukikije kandi bizagira akamaro mu gihe kizaza. ",
 
 
 
@@ -141,17 +141,17 @@
 
 
 
-      "our-product-section-title": "Our Products",
-      "our-product-section-description": "The '3Ts'—Tantalum, Tungsten, and Tin—are critical minerals essential most known for being in electronics, chances are, we are using more products made with these minerals on a daily basis than we realize. As demand for advanced technologies and renewable energy grows, their strategic importance increases. This makes them vital for economic and technological development.",
+      "our-product-section-title": "Ibicuruzwa Byacu ",
+      "our-product-section-description": "'3Ts' Tantalum, Tungsten, na Tin ni amabuye akenerwa cyane mu bikoresho by’ikoranabuhanga, amahirwe ahari ni uko dukoresha ibi bikoresho byakozwe muri aya mabuye mu  buzima bwa buri munsi kurenza uko tubitekereza. Uko isoko ry’ibikoresho bigezweho by’ikoranabuhanga ryiyongera, ni ko n’akamaro k’aya mabuye kiyongera. Ibi bituma agira uruhare runini mu kuzamura ubukungu ndetse n’ikoranabuhanga.",
 
       "our-product-TIN": "TIN",
-      "our-product-TIN-description": "Primarily used in solder. Demand set to increase with electronics a main downstream market and developing application in Li-ion batteries",
+      "our-product-TIN-description": "Ni ibuye rikoreshwa cyane cyane mu gukora ibyuma bikomeye. Isoko ryaryo biteganyijwe rizakomeza kurushaho kwaguka bitewe n’uko ibikoresho by’ikoranabuhanga biri gukenerwa cyane ku isoko by’umwihariko muri bateri za Li-on zifashishwa mu modoka z’amashanyarazi.",
 
       "our-product-TANTALUM": "TANTALUM",
-      "our-product-TANTALUM-description": "50-70% of tantalum supply is used in the electronics industry (mainly capacitators and semiconductors); other uses in medical industry",
+      "our-product-TANTALUM-description": "50-70% bya tantalum bikoreshwa mu nganda zikora ibikoresho by’ikoranabuhanga (by’umwihariko mu byuma bikomeye, ibindi bigakoreshwa mu nganda zitunganya imiti. ",
 
       "our-product-TUNGSTEN": "TUNGSTEN",
-      "our-product-TUNGSTEN-description": "Used mostly for cemented carbide (industrial cutting material), high-speed steels and super alloys and mill products (e.g.light bulb filaments). Demand reached 10-year high in 2022; most at risk of depletion."
+      "our-product-TUNGSTEN-description": "Akoreshwa mu bikoresho bikoreshwa mu gukata ibintu, ibyuma byihanganira umuriro, ibyuma bikomeye cyane, ndetse n’ibindi bikoresho (nk’insinga zitanga urumuri mu amatara). Mu 2022 isoko ry’aya mabuye ryariyongereye cyane ugereranyije n’imyaka 10 yabanje, kandi hari impungenge zuko yabura."
 
 
 
