--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -136,7 +136,7 @@
 
 
       "executive-management-team-section-title": "Executive Management Team",
-      "view-all-team-button": "View All Time",
+      "view-all-team-button": "View All Team",
 
 
 
