--- a/locales/kiny/translation.json
+++ b/locales/kiny/translation.json
@@ -145,13 +145,13 @@
       "our-product-section-description": "'3Ts' Tantalum, Tungsten, na Tin ni amabuye akenerwa cyane mu bikoresho by’ikoranabuhanga, amahirwe ahari ni uko dukoresha ibi bikoresho byakozwe muri aya mabuye mu  buzima bwa buri munsi kurenza uko tubitekereza. Uko isoko ry’ibikoresho bigezweho by’ikoranabuhanga ryiyongera, ni ko n’akamaro k’aya mabuye kiyongera. Ibi bituma agira uruhare runini mu kuzamura ubukungu ndetse n’ikoranabuhanga.",
 
       "our-product-TIN": "TIN",
-      "our-product-TIN-description": "Ni ibuye rikoreshwa cyane cyane mu gukora ibyuma bikomeye. Isoko ryaryo biteganyijwe rizakomeza kurushaho kwaguka bitewe n’uko ibikoresho by’ikoranabuhanga biri gukenerwa cyane ku isoko by’umwihariko muri bateri za Li-on zifashishwa mu modoka z’amashanyarazi.",
+      "our-product-TIN-description": "Ni ibuye rikoreshwa cyane cyane mu gukora ibyuma bikomeye. Isoko ryaryo biteganyijwe rizakomeza kurushaho kwaguka bitewe n’uko ibikoresho by’ikoranabuhanga biri gukenerwa cyane ku isoko by’umwihariko muri bateri za Li-on zifashishwa mu modoka z’amashanyarazi. ",
 
       "our-product-TANTALUM": "TANTALUM",
-      "our-product-TANTALUM-description": "50-70% bya tantalum bikoreshwa mu nganda zikora ibikoresho by’ikoranabuhanga (by’umwihariko mu byuma bikomeye, ibindi bigakoreshwa mu nganda zitunganya imiti. ",
+      "our-product-TANTALUM-description": "50-70% bya Tantalum bikoreshwa mu nganda zikora ibikoresho by’ikoranabuhanga (by’umwihariko mu byuma bikomeye, ibindi bigakoreshwa mu nganda zitunganya imiti. ",
 
       "our-product-TUNGSTEN": "TUNGSTEN",
-      "our-product-TUNGSTEN-description": "Akoreshwa mu bikoresho bikoreshwa mu gukata ibintu, ibyuma byihanganira umuriro, ibyuma bikomeye cyane, ndetse n’ibindi bikoresho (nk’insinga zitanga urumuri mu amatara). Mu 2022 isoko ry’aya mabuye ryariyongereye cyane ugereranyije n’imyaka 10 yabanje, kandi hari impungenge zuko yabura."
+      "our-product-TUNGSTEN-description": "Ikoreshwa mu bikoresho bikata ibyuma, mu byuma byikaraga ku muvuduko wo hejuru, ibyuma bikomeye cyane, ndetse n’ibindi bikoresho (nk’insinga zitanga urumuri mu matara). Mu 2022 isoko ry’aya mabuye ryariyongereye cyane ugereranyije n’imyaka 10 yabanje, kandi hari impungenge z’uko yabura."
 
 
 
