--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -110,16 +110,16 @@
       "we-empower": "We empower & impact",
       "we-empower-description": "We empower communities by investing in programs that develop talent and drive local economic growth.",
       "we-do-no-warm": "We do no harm",
-      "we-do-no-warm-description": "We are committed to safe, ethical, and eco-friendly mining, ensuring our work benefits communities and the planet.",
+      "we-do-no-warm-description": "We are committed to safe, ethical, profitable, and eco-friendly mining operations. We’ve made it our mission to find new and better ways to mine responsibly and ensure that our work doesn’t have an adverse effect on the communities where we operate, our people or the planet.",
       "we-set-standard": "We set the standard",
-      "we-set-standard-description": "As a leading mining organization, we follow international standards and continuously improve our operations.",
+      "we-set-standard-description": "As a leading mining organization, we operate according to international industry standards and take a continuous improvement approach to our work. ",
       "we-hold-ourselves-accountable": "We hold ourselves accountable",
-      "we-hold-ourselves-accountable-description": "We each uphold our mission, follow legislation, self-assess, and address issues to stay on track.",
+      "we-hold-ourselves-accountable-description": "Each one of us understands our role in delivering on our mission and upholding our values. We respect and abide by all legislation, proactively self-assess and adjust to stay on track, abide by a strict code of conduct and speak up when there are issues to resolve.",
 
 
 
       "our-strategy-section-title": "Our Strategy",
-      "our-strategy-section-description": "To grow sustainably, we have defined four key pillars with clear outcomes and targets, which we are pursuing equally over the next three years.",
+      "our-strategy-section-description": "We champion economic empowerment, investing in programmes that develop the next generation of industry talent. We create vehicles for economic progress for the people in the communities where we are based.",
 
       "our-strategies-business": "Our Business",
       "our-strategies-business-description": "We prioritize optimized business planning to ensure safe, ethical, profitable, and efficient mining operations across all our processes.",
@@ -170,7 +170,7 @@
         "project-sites": {
             "trinity-nyakabingo-mine": "Trinity Nyakabingo Mine",
             "trinity-musha-mines": "Trinity Musha Mines",
-            "trinity-rutongo-mines": "Trinity Rutongo Mines",
+            "trinity-rutongo-mines": "Rutongo Mines",
             "LITHIUM-EXPLORATION": "LITHIUM EXPLORATION"
 
 
