--- a/locales/kiny/translation.json
+++ b/locales/kiny/translation.json
@@ -63,7 +63,7 @@
       "our-project": "Imishinga Dufite",
       "trinity-Nyakabingo-mine":"Ikirombe cya Trinity Nyakabingo",
       "trinity-musha-mine":"Ikirombe cya Trinity Musha",
-      "rutongo-mine": "Ikirombe cya Trinity Rutongo",
+      "rutongo-mine": "Ikirombe cya Rutongo",
 
 
 
@@ -170,7 +170,7 @@
         "project-sites": {
             "trinity-nyakabingo-mine": "Ikirombe cya Trinity Nyakabingo",
             "trinity-musha-mines": "Ikirombe cya Trinity Musha",
-            "trinity-rutongo-mines": "Ikirombe cya Trinity Rutongo",
+            "trinity-rutongo-mines": "Ikirombe cya Rutongo",
             "LITHIUM-EXPLORATION": "Ubushakashatsi kuri Lithium"
 
         },
