--- a/locales/kiny/translation.json
+++ b/locales/kiny/translation.json
@@ -49,7 +49,7 @@
       "about-tab-who-we-are": "Abo Turi Bo",
       "about-tab-vision": "Icyerekezo Cyacu",
       "about-tab-mission": "Inshingano Yacu",
-      "who-we-are-content": "Trinity Metals ni ikigo gitunganya ikinyabutabire cya tin, ibyuma bikozwe muri gasegereti (tungstène) na tantalum. Mu mikorere yacu dushyira imbere uburyo bwo kubungabunga ibidukikije n'amahame mbonezamuco mu mfuruka zose z'ibikorwa byacu by'ubushabitsi.",
+      "who-we-are-content": "Trinity Metals ni ikigo gitunganya amabuye y'agaciro ya gasegereti (t)in, ibyuma bikozwe muri wolufuramu (tungstène) na koruta (tantalum). Mu mikorere yacu dushyira imbere uburyo bwo kubungabunga ibidukikije n'imico mbonera y'ubumuntu mu mfuruka zose z'ibikorwa byacu by'ubushabitsi.",
       "our-vision-content": "Dukora itandukaniro mu Isi binyuze mu gutanga ibikoresho byifashishwa mu ikoranabuhanga rigezweho byizewe.",
       "our-mission-content": "Dufite inshingano yo gutunganya ibyuma byujuje ubuziranenge binyuze mu bikorwa bibungabunga ibidukikije kandi hakurikijwe amahame y'ubushabitsi.",
       "employees":"Abakozi",
